external-crates/move/crates/move-compiler/tests/move_check/borrows/move_full_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC07003]: invalid operation, could create a dangling reference
   ┌─ tests/move_check/borrows/move_full_invalid.move:13:9
   │
12 │         let f = &x;
   │                 -- It is still being borrowed by this reference
13 │         move x;
   │         ^^^^^^ Invalid move of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
   ┌─ tests/move_check/borrows/move_full_invalid.move:18:9
   │
17 │         let f = &mut x;
   │                 ------ It is still being mutably borrowed by this reference
18 │         move x;
   │         ^^^^^^ Invalid move of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
   ┌─ tests/move_check/borrows/move_full_invalid.move:23:9
   │
22 │         let f = id(&x);
   │                 ------ It is still being borrowed by this reference
23 │         move x;
   │         ^^^^^^ Invalid move of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
   ┌─ tests/move_check/borrows/move_full_invalid.move:28:9
   │
27 │         let f = id_mut(&mut x);
   │                 -------------- It is still being mutably borrowed by this reference
28 │         move x;
   │         ^^^^^^ Invalid move of variable 'x'
